tests/regression/error/hw4_error27.sml
val prog =
  PROGRAM
    {classes=[],decls=["a","b","c","a"],funcs=[],
     stmts=[ST_PRINT {exp=EXP_ID "a"}]} : program
;
